Free for all users subscription added. And more updates
